Refactor package structure for user management service
Updated the package structure from "com.proysis.coreservices.usermanagementservicebusiness" to "com.bycrafter.core.usermanagement" across all modules. Adjusted import statements, class paths, and application properties to align with the new structure. This change improves code organization and prepares for future scalability.

--- a/app/src/main/resources/application-local.yml
+++ b/app/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: user-management-business-application
+    name: user-management
   datasource:
     password: password
     url: jdbc:postgresql://localhost:5432/amigoscode
