--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     container_name: postgres
     image: postgres
     environment:
-      POSTGRES_USER: amigoscode
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: bycrafter
+      POSTGRES_PASSWORD: AyB2DMCcyca2rGx
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
