--- a/app/pom.xml
+++ b/app/pom.xml
@@ -5,19 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.bycrafter.core</groupId>
-        <artifactId>user-management-bom</artifactId>
+        <artifactId>account-management-bom</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../bom</relativePath>
     </parent>
     <packaging>jar</packaging>
 
-    <name>user-management-app</name>
-    <artifactId>user-management-app</artifactId>
+    <name>account-management-app</name>
+    <artifactId>account-management-app</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.bycrafter.core</groupId>
-            <artifactId>user-management-grpc</artifactId>
+            <artifactId>account-management-grpc</artifactId>
         </dependency>
     </dependencies>
 </project>
