--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <artifactId>user-management</artifactId>
+    <artifactId>account-management</artifactId>
     <packaging>pom</packaging>
 
     <modules>
@@ -41,4 +41,14 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
+
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub bycrafter Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/bycrafter/account-management</url>
+        </repository>
+    </distributionManagement>
+
 </project>
