Refactor User Management to Account Management module.
Renamed and restructured the User Management module to Account Management. Introduced support for roles management and user-role relationships while updating service, GRPC, and repository layers. Adjusted configurations to align with the new module structure.

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: user-management
+    name: account-management
   datasource:
     password: password
     url: jdbc:postgresql://localhost:5432/amigoscode
@@ -16,6 +16,12 @@ spring:
 grpc:
   server:
     port: 6565
+    security:
+      enabled: true
+      key-store: classpath:keystore.p12
+      key-store-password: password
+      key-store-format: PKCS12
+
 
 eureka:
   instance:
