--- a/app/src/main/resources/application-local.yml
+++ b/app/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: user-management
+    name: account-management
   datasource:
     password: password
     url: jdbc:postgresql://localhost:5432/amigoscode
@@ -13,9 +13,16 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: false
+    open-in-view: false
+
 grpc:
   server:
     port: 6566
+    security:
+      enabled: true
+      key-store: classpath:keystore.p12
+      key-store-password: password
+      key-store-format: PKCS12
 
 
 
